--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
+    "start": "node build/app.js",
     "build": "tsc"
   },
   "dependencies": {
