--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "main": "index.js",
   "repository": "https://github.com/Afrosiyob/i18next-backend.git",
   "author": "Afrosiyob <45900728+Afrosiyob@users.noreply.github.com>",
+  "contributors": [
+    "Afrosiyob"
+  ],
   "license": "MIT",
+  "engines": {
+    "node": "10.15.3"
+  },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
