--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   ],
   "license": "MIT",
   "engines": {
-    "node": "10.15.3"
+    "node": "18.12.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
@@ -20,8 +20,7 @@
   },
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
-    "build": "tsc",
-    "start": "node build/app.js"
+    "build": "tsc"
   },
   "dependencies": {
     "@types/config": "^3.3.0",
