--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
-    "install": "cd client && npm run install",
+    "install": "cd client && npm i",
     "build": "tsc && cd client && npm run build",
     "start": "node build/app.js"
   },
